ci/manifests/dev-docs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docs-site-dev
  name: docs-site-dev
  namespace: docs-site
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: docs-site-dev
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::139475575661:role/Jenkins/Jenkins-S3-DOCS-Development
        iam.amazonaws.com/session-name: dev-docs.d2iq.com@konvoy
      labels:
        app: docs-site-dev
    spec:
      containers:
      - env:
        - name: NGINX_PORT
          value: "80"
        image: nginx:1.21.1
        imagePullPolicy: IfNotPresent
        name: docs-site
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: docssite
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
      volumes:
        - name: docssite
          emptyDir: {}
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: docs-site-dev
  namespace: docs-site
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: docs-site-dev
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/auth-response-headers: X-Forwarded-User,Authorization,Impersonate-User,Impersonate-Group
    traefik.ingress.kubernetes.io/auth-type: forward
    traefik.ingress.kubernetes.io/auth-url: http://traefik-forward-auth.docs-site.svc.cluster.local:4181/
    traefik.ingress.kubernetes.io/priority: "2"
  name: dev-docs.d2iq.com
  namespace: docs-site
spec:
  rules:
  - host: dev-docs.d2iq.com
    http:
      paths:
      - backend:
          serviceName: docs-site-dev
          servicePort: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dev-docs.d2iq.com
    secretName: dev-docs.d2iq.com-tls
